Changelog
=========

1.6-dev - (unreleased)
----------------------

1.5 - (2013-11-14)
------------------
* Bug fix: don't hardcode width, instead set the class=widen 
  to the embeded iframes
  [tiberich #17266]

1.4 - (2013-11-12)
------------------
* Feature: show a loading icon before loading the map
  [tiberich #17338]

1.3 - (2013-11-08)
------------------
* Bug fix: reconfigure iframe width to make the wider
  [tiberich #17266]
* Bug fix: only set width/height if embeding an iframe
  [tiberich #17266]

1.2 - (2013-11-08)
------------------
* Bug fix: make the displayed embeded maps larger
  [tiberich #17266]

1.1 - (2013-11-05)
------------------
* Feature: Added legend field to the LandItem content type
  [tiberiu #16962]

1.0  - (initial release)
------------------------
* Initial release
