@@ -3,6 +3,8 @@ Changelog
 
 1.6-dev - (unreleased)
 ----------------------
+* Feature: added landitems administrative @@overview page
+  [robaaoli #17440]
 
 1.5 - (2013-11-14)
 ------------------
